Added description content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Tibo Sevenhant - HTML5 Boilerplate</title>
-        <meta name="description" content="">
+        <meta name="description" content="This is my html5 boilerplate">
     </head>
     <body>
         <header>
