--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
         <h3>
             Styling lists is easy
         </h3>
-        <p>
-            Add an unorderd list with 3 list items here
-        </p>
+        <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, molestias.</li>
+            <li>Ad ipsum laborum, ducimus blanditiis assumenda mollitia iusto repellat. Porro.</li>
+            <li>Molestiae, labore quidem quasi placeat magnam nemo deserunt iure vero.</li>
+        </ul>
         <hr>
         <footer>
             <p>By <strong>Your name</strong></p>
