--- a/index.html
+++ b/index.html
@@ -49,12 +49,17 @@
         </h3>
         <ul>
             <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, molestias.</li>
+            <ol>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur iure temporibus unde, vero veniam! Odit quidem vel, quo praesentium itaque, eum error, molestias quod dolore delectus velit laborum et soluta!</li>
+                <li>Recusandae quae culpa, doloremque nihil consequuntur quia quod incidunt illo temporibus repudiandae earum delectus asperiores rem saepe tempora amet obcaecati fugit quisquam ipsa, unde error eligendi expedita? Culpa, nisi expedita.</li>
+                <li>Quis impedit perspiciatis enim distinctio ipsa reiciendis nesciunt nulla officiis. Molestiae error deleniti atque, maxime voluptatum est ex? Magnam nihil consequatur reiciendis commodi aliquam accusamus rem porro, sunt voluptate est.</li>
+            </ol>
             <li>Ad ipsum laborum, ducimus blanditiis assumenda mollitia iusto repellat. Porro.</li>
             <li>Molestiae, labore quidem quasi placeat magnam nemo deserunt iure vero.</li>
         </ul>
         <hr>
         <footer>
-            <p>By <strong>Your name</strong></p>
+            <p>By <strong>Tibo Sevenhant</strong></p>
         </footer>
     </body>
 </html>
